# jxl-rust-reference

./: BUILD-AND-TEST.md  COMPREHENSIVE_AUDIT_2025.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  HANDOVER_NEXT_SESSION.md  HANDOVER_PHASE2.md  HANDOVER_SESSION_011CV67G3.md  IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  LIMITATIONS.md  OPTIMIZATIONS.md  README.md  RESEARCH_ANS_ALPHABET_SIZE_OPTIONS.md  ROADMAP.md  SESSION_HANDOVER.md  SESSION_HANDOVER_2025-11-14.md  SESSION_HANDOVER_2025-11-14_ALPHA_LOSSLESS.md  SESSION_HANDOVER_2025-11-14_CONTINUED.md  SESSION_HANDOVER_2025-11-14_HYBRIDUINT.md  SESSION_HANDOVER_2025-11-14_LOSSLESS_DECODER.md  SESSION_SUMMARY.md  TEST_COVERAGE.md  measure_compression.rs  test_output.txt
.github/workflows/: docs.yml  rust.yml
benches/: Cargo.toml  transforms.rs
benches/benches/: compression_quality.rs  dct_comparison.rs  end_to_end.rs  entropy_coding.rs  simd_performance.rs
crates/jxl/: Cargo.toml
crates/jxl-bitstream/: Cargo.toml
crates/jxl-bitstream/src/: ans.rs  bitreader.rs  bitwriter.rs  context.rs  huffman.rs  hybrid_uint.rs  lib.rs
crates/jxl-color/: Cargo.toml
crates/jxl-color/src/: correlation.rs  lib.rs  srgb.rs  xyb.rs  xyb_simd.rs
crates/jxl-core/: Cargo.toml
crates/jxl-core/src/: buffer_pool.rs  consts.rs  error.rs  image.rs  lib.rs  metadata.rs  types.rs
crates/jxl-decoder/: Cargo.toml
crates/jxl-decoder/src/: lib.rs  progressive.rs
crates/jxl-encoder/: Cargo.toml
crates/jxl-encoder/src/: lib.rs
crates/jxl-headers/: Cargo.toml
crates/jxl-headers/src/: animation.rs  container.rs  frame.rs  lib.rs  spec_metadata.rs
crates/jxl-transform/: Cargo.toml
crates/jxl-transform/src/: adaptive_quant.rs  dct.rs  dct_optimized.rs  dct_simd.rs  groups.rs  lib.rs  modular.rs  prediction.rs  progressive.rs  quantization.rs  simd.rs  zigzag.rs
crates/jxl/src/: lib.rs
crates/jxl/tests/: edge_cases_test.rs  lossless_test.rs  progressive_test.rs  roundtrip_test.rs
examples/: benchmark_compression.rs  encode_decode.rs  error_handling.rs  pixel_formats.rs
tools/diagnose-gradient/: Cargo.toml
tools/diagnose-gradient/examples/: test_ans_256.rs  test_ans_ac.rs  test_dc_ac_merge.rs  test_dct.rs  test_large_alphabet_ans.rs  test_multi_block.rs  test_rans_directly.rs  test_zigzag_values.rs  trace_rans_11symbols.rs
tools/diagnose-gradient/src/: main.rs
