[package]
name = "jxl-decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jxl-core = { path = "../jxl-core" }
jxl-bitstream = { path = "../jxl-bitstream" }
jxl-color = { path = "../jxl-color" }
jxl-transform = { path = "../jxl-transform" }
jxl-headers = { path = "../jxl-headers" }
rayon.workspace = true
