[package]
name = "jxl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JPEG XL image format reference implementation in Rust"

[dependencies]
jxl-core = { path = "../jxl-core" }
jxl-decoder = { path = "../jxl-decoder" }
jxl-encoder = { path = "../jxl-encoder" }

[dev-dependencies]
